@@ -2443,6 +2443,37 @@ condition|)
 block|{
 return|return;
 block|}
+name|String
+name|currentComment
+init|=
+name|getComment
+argument_list|(
+name|dataMap
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|currentComment
+operator|==
+literal|null
+condition|)
+block|{
+name|currentComment
+operator|=
+literal|""
+expr_stmt|;
+block|}
+if|if
+condition|(
+operator|!
+name|currentComment
+operator|.
+name|equals
+argument_list|(
+name|comment
+argument_list|)
+condition|)
+block|{
 name|ObjectInfo
 operator|.
 name|putToMetaData
@@ -2477,6 +2508,7 @@ name|dataMap
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 specifier|private
 name|String
